change default fooni

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -160,7 +160,7 @@
 </style>
 
 <body>
-  <img id='fooni' src="can.gif">
+  <img id='fooni' src="friday-night.webp">
   <div class="playerParent">
     <div id="player"></div>
   </div>
@@ -203,10 +203,10 @@
   <input type="button" class="button" id="setVidTimeLeftButton" value="Set" onclick="setVidSeconds()">
   <div id="nextVideoCountdownCurrentValue" class="settingsDisplay"></div>
   <br><br><br>
+  <input type="button" class="button" id="fridayButton" value="FRIDAY NIGHT" onclick="loadFridayNight()"><br>
   <input type="button" class="button" id="canButton" value="can" onclick="loadCan()"><br>
   <input type="button" class="button" id="uselessButt" value="banan" onclick="loadBanan()"><br>
   <input type="button" class="button" id="preggersButton" value="PREGGERS" onclick="loadPreggers()"><br>
-  <input type="button" class="button" id="fridayButton" value="friday night!" onclick="loadFridayNight()"><br>
   <input type="button" class="button" id="intoTheAyayaButton"
     value="IntotheAyayalandtheWeebsarmymarchComradesstandsidebysidetostoptheNormanschargeandNammers"
     onclick="loadIntoTheAyayaLand()"><br>
