fix shuffle option

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -160,7 +160,7 @@
 </style>
 
 <body>
-  <img id='fooni' src="friday-night.webp">
+  <img id='fooni' src="img/friday-night.webp">
   <div class="playerParent">
     <div id="player"></div>
   </div>
@@ -649,7 +649,7 @@
     }
 
     function getEndOfPlaylistMessage() {
-      return 'End of playlist <img src="umaruCry.webp" width="50" height="50">';
+      return 'End of playlist <img src="img/umaruCry.webp" width="50" height="50">';
     }
 
     function clearCountdownTimer() {
@@ -680,12 +680,7 @@
 
     function configurePlayerShuffle() {
       if (!player) { return; }
-
-      player.setShuffle(getSetShuffleBool());
-    }
-
-    function getSetShuffleBool() {
-      return document.getElementById("myCheck");
+      player.setShuffle(document.getElementById("myCheck").checked);
     }
 
     function getSecondsMessage(seconds) {
@@ -696,23 +691,23 @@
     }
 
     function loadCan() {
-      document.getElementById('fooni').src = 'can.gif';
+      document.getElementById('fooni').src = 'img/can.gif';
     }
 
     function loadBanan() {
-      document.getElementById('fooni').src = 'banan.webp';
+      document.getElementById('fooni').src = 'img/banan.webp';
     }
 
     function loadPreggers() {
-      document.getElementById('fooni').src = 'PREGGERS.webp';
+      document.getElementById('fooni').src = 'img/PREGGERS.webp';
     }
 
     function loadFridayNight() {
-      document.getElementById('fooni').src = 'friday-night.webp';
+      document.getElementById('fooni').src = 'img/friday-night.webp';
     }
 
     function loadIntoTheAyayaLand() {
-      document.getElementById('fooni').src = 'intotheayaya.webp';
+      document.getElementById('fooni').src = 'img/intotheayaya.webp';
     }
   </script>
 </body>
