--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -187,7 +187,7 @@
   <input type="button" class="button" id="setPlaylistButton" value="Load playlist" onclick="setPlaylist()">
   <label id="errorMessage"></label>
   <br>
-  <label>Shuffle Playlist:</label>
+  <label>Shuffle Playlist (kind of buggy):</label>
   <input type="checkbox" id="myCheck" onclick="configurePlayerShuffle()">
   <br><br>
   <label>The following will remove any timer <b>and reveal the answer</b> until the next video loads:</label>
@@ -208,7 +208,7 @@
   <br><br><br>
   <input type="button" class="button" id="fridayButton" value="FRIDAY NIGHT" onclick="loadFridayNight()"><br>
   <input type="button" class="button" id="canButton" value="can" onclick="loadCan()"><br>
-  <input type="button" class="button" id="uselessButt" value="banan" onclick="loadBanan()"><br>
+  <input type="button" class="button" id="uselessButt" value="Banana, Ready-to-Eat" onclick="loadBanan()"><br>
   <input type="button" class="button" id="preggersButton" value="PREGGERS" onclick="loadPreggers()"><br>
   <input type="button" class="button" id="intoTheAyayaButton"
     value="IntotheAyayalandtheWeebsarmymarchComradesstandsidebysidetostoptheNormanschargeandNammers"
